# OpenIGTLinkAndroid

./: README.md
IGTLDesktop/: CMakeLists.txt
IGTLDesktop/Src/: igtlClient.h  igtlServer.h  main.cxx  myUtils.h
IGTLMobile/: AndroidManifest.xml  CMakeLists.txt
IGTLMobile/jni/: CMakeLists.txt  igtlClient.h  igtlServer.h  main.cxx  myUtils.h
IGTLMobile/res/values/: strings.xml
IGTLMobile/src/com/ircad/test/: MyActivity.java
